<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/actions_layout"
        android:layout_margin="10dp"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.rajan.eliteeditor.Elite.EliteEditor
                android:id="@+id/editor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/kit"
                android:background="@android:color/white"
                android:gravity="start"
                android:hint="@string/editor_hint"
                android:padding="10dp"
                android:scrollbars="vertical"
                android:textSize="17sp" />

            <android.support.v7.widget.CardView
                android:id="@+id/kit"
                android:layout_width="match_parent"
                app:cardElevation="4dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#EFEFEF"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/bold"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="?android:selectableItemBackground"
                            android:contentDescription="@string/bold"
                            android:padding="10dp"
                            android:onClick="onBoldClick"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_format_bold"
                            android:tint="#444444" />

                        <ImageButton
                            android:id="@+id/italic"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="?android:selectableItemBackground"
                            android:contentDescription="@string/italic"
                            android:padding="10dp"
                            android:onClick="onItalicClick"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_format_italic"
                            android:tint="#444444" />

                        <ImageButton
                            android:id="@+id/underline"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="?android:selectableItemBackground"
                            android:contentDescription="@string/underline"
                            android:padding="10dp"
                            android:onClick="onUnderlineClick"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_format_underline"
                            android:tint="#444444" />

                        <ImageButton
                            android:id="@+id/strikethrough"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="?android:selectableItemBackground"
                            android:contentDescription="@string/strike"
                            android:padding="10dp"
                            android:onClick="onStrikeClicked"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_format_strikethrough"
                            android:tint="#444444" />

                        <ImageButton
                            android:id="@+id/bullet"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="?android:selectableItemBackground"
                            android:contentDescription="@string/bullet"
                            android:padding="10dp"
                            android:onClick="onBulletClick"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_format_bullet"
                            android:tint="#444444" />

                        <ImageButton
                            android:id="@+id/quote"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="?android:selectableItemBackground"
                            android:contentDescription="@string/quote"
                            android:padding="10dp"
                            android:scaleType="fitCenter"
                            android:onClick="onQuoteClick"
                            android:src="@drawable/ic_format_quote"
                            android:tint="#444444" />

                        <ImageButton
                            android:id="@+id/link"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:onClick="onLinkClick"
                            android:background="?android:selectableItemBackground"
                            android:contentDescription="@null"
                            android:padding="10dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_insert_link"
                            android:tint="#444444" />

                        <ImageButton
                            android:id="@+id/clear"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:background="?android:selectableItemBackground"
                            android:contentDescription="@null"
                            android:padding="10dp"
                            android:onClick="onClearClick"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_format_clear"
                            android:tint="#444444" />

                    </LinearLayout>

                </HorizontalScrollView>
            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/actions_layout"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_margin="5dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            style="?android:selectableItemBackground"
            android:onClick="onSaveClick"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_blue_dark"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="?android:selectableItemBackground"
            android:text="@string/submit"
            android:onClick="onSubmitClick"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_green_dark"/>
    </LinearLayout>
</RelativeLayout>